# MyIndustrialHMI

./: .gitattributes  .gitignore  CMakeLists.txt  ProtocolData.h  README.md  commworker.cpp  commworker.h  databasemanager.cpp  databasemanager.h  devicemanager.cpp  devicemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  protocolparser.cpp  protocolparser.h  remove_notes.py  serialworker.cpp  serialworker.h  tcpworker.cpp  tcpworker.h
src/: main.cpp
src/comm/: commworker.h  serialworker.cpp  serialworker.h  tcpworker.cpp
src/database/: databasemanager.cpp  databasemanager.h
src/device/: devicemanager.cpp  devicemanager.h
src/protocol/: ProtocolData.h  protocolparser.cpp  protocolparser.h
src/ui/: historydialog.cpp  historydialog.h  historydialog.ui  historywidget.cpp  historywidget.h  historywidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
tests/: CMakeLists.txt  tst_protocolparser.cpp
